src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__budget_banner__budget_banner_renders_at_80pct.snap
---
source: src/tui/snapshot_tests/budget_banner.rs
expression: terminal.backend()
---
"  BUDGET ALERT: 80% of $50.00 used ($40.00 so far)                              "
"                                                                                "
"                                                                                "
