src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__budget_banner__budget_banner_renders_at_90pct.snap
---
source: src/tui/snapshot_tests/budget_banner.rs
expression: terminal.backend()
---
"  BUDGET ALERT: 90% of $50.00 used ($45.00 so far)                              "
"                                                                                "
"                                                                                "
